Fix break in responsive (x) button in FilterBar

--- a/src/clientFilePage/filterBar.styl
+++ b/src/clientFilePage/filterBar.styl
@@ -154,7 +154,7 @@
 			padding-right 30px !important
 
 		.closeButton
-			position absolute
+			position absolute !important
 			top 5px
 			right 5px
 
